# etl-project

./: .gitconfig  .pre-commit-config.yaml  README.md  config.ini  main.py  pyproject.toml
app/extraction/: data_contract.json  file_validation.py  get_file.py
app/load/: check_schema_exists.py  create_connection.py  create_database.py  populate_check.py  run_sql_scripts.py  staging_load.py
app/load/database/Staging/tables/: Policies.sql
app/load/database/Store/tables/: PoliciesData.sql
app/load/database/Transform/tables/: DimCustomer.sql  DimDate.sql  DimEventType.sql  DimPolicy.sql  FactPolicyEvent.sql
app/logging/: extract_logger.py  load_logger.py  transformation_logger.py
app/transformations/Store/procedures/: uspPoliciesData.sql
app/transformations/Transform/populate_script/: PopulateDimDate.sql
app/transformations/Transform/procedures/: uspDimCustomer.sql  uspDimEventType.sql  uspDimPolicy.sql  uspFactPolicyEvent.sql
app/transformations/data_cleaning/: data_cleaning.py
main_etl/: Extraction_Stage.py  Setup_Stage.py  Transform_Stage.py
practice_data/: test_file.json
